# LibraryAPI

./: .gitignore  README.MD  pyproject.toml
backend/auth/: .env.example  Dockerfile  README.md  pyproject.toml
backend/auth/migrations/: env.py
backend/auth/migrations/versions/: 31b9d6382429_initial.py
backend/auth/src/: __init__.py  main.py
backend/auth/src/auth/: dependencies.py  schemas.py
backend/auth/src/auth/api/v1/: router.py
backend/auth/src/auth/jwt/: backend.py  schemas.py  service.py  storage.py  utils.py
backend/auth/src/cli/: cli.py  database.py  messages.py  superuser.py
backend/auth/src/common/: cache.py  database.py  dependencies.py  exceptions.py  models.py  schemas.py
backend/auth/src/permissions/: enums.py  exceptions.py  models.py  repositories.py  schemas.py  services.py
backend/auth/src/permissions/api/v1/: router.py
backend/auth/src/role/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py
backend/auth/src/role/api/v1/: router.py
backend/auth/src/settings/: app.py  auth.py  db.py  jaeger.py  logging.py  service.py
backend/auth/src/users/: dependencies.py  models.py  repositories.py  schemas.py  service.py  settings.py
backend/auth/src/users/api/v1/: router.py
backend/auth/tests/functional/: conftest.py
backend/auth/tests/functional/src/auth/: test_auth.py  test_protected_endpoint.py
backend/auth/tests/functional/src/permissions/: test_api.py
backend/auth/tests/functional/src/users/: test_api.py
backend/etl_elastic/: .env.example  Dockerfile  pyproject.toml
backend/etl_elastic/configs/es_schemas/: es_books_schema.json
backend/etl_elastic/etl/: main.py
backend/etl_elastic/etl/logic/backoff/: backoff.py
backend/etl_elastic/etl/logic/elastic_search/: elastic_loader.py
backend/etl_elastic/etl/logic/postgresql/: client.py  enrichers.py  mergers.py  producers.py  runner.py
backend/etl_elastic/etl/logic/state/: state.py
backend/etl_elastic/etl/logic/storage/: storage.py
backend/etl_elastic/etl/logic/transformer/: dataclasses.py  transformers.py
backend/etl_elastic/etl/settings/: settings.py
backend/library_api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/library_api/migrations/: env.py
backend/library_api/src/: main.py
docker/: .dockerignore  dev.yaml  local.yaml
docker/nginx/: nginx.conf  site.conf
(+43 files in other folders)
