[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Shams-me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "~4.5"
fastapi = "~0.108.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
uvicorn = "~0.22"
gunicorn = "~20.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-jaeger = "^1.20.0"
alembic = "^1.13.1"
psycopg = "^3.1.16"
sqlalchemy = { extras = ["asyncio"], version = "~2.0" }
psycopg-binary = "~3.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
typer = "^0.9.0"
fastapi-limiter = "^0.1.6"
passlib = "^1.7.4"
fastapi-pagination = "^0.12.14"
structlog = "^23.3.0"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.6"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
ipython = "^8.13.2"
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
types-redis = "^4.5.5.2"
pyproject-flake8 = "^6.0.0.post1"
dlint = "^0.14.1"
flake8-2020 = "^1.8.0"
flake8-bugbear = "^23.5.9"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.12.0"
flake8-deprecated = "^2.0.1"
flake8-variables-names = "^0.0.5"
mccabe = "^0.7.0"
pep8-naming = "^0.13.3"
flake8-pyproject = "^1.2.3"
mypy = "^1.3.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
